src- Version 4.19/objects/Product_Rate_Plan_Charge__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>This forms tier 3 of the product catalog.</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <description>This field is used for Minimum customer spent</description>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Sequence_Number__c</fullName>
        <label>Charge Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unit Cost Price</description>
        <inlineHelpText>Unit Cost Price</inlineHelpText>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exempted_From_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete_Exempted From VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this is checked for a specific charge all the parameters of the charge should be editable</description>
        <label>Is Price Editable In Quote/Order Wizards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_of_other_Charges__c</fullName>
        <description>Use this in conjunction with &quot;Percentage Pricing&quot; in the pricing model. You can typically use this for charges that are a percentage of other charges. 
e.g., Maintenance Charges could be 25% of the License charges.</description>
        <inlineHelpText>Use this in conjunction with &quot;Percentage Pricing&quot; in the pricing model. You can typically use this for charges that are a percentage of other charges. 
e.g., Maintenance Charges could be 25% of the License charges.</inlineHelpText>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Format__c</fullName>
        <description>This will specify whether price is default or tiered</description>
        <inlineHelpText>Please refer to the user documentation for detailed information on what the different pricing models mean.
Search for &quot;Pricing Model&quot; in the documentation.</inlineHelpText>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit Pricing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Pricing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>This will specify whether price is onetime, weekly, monthly etc or usage(metered) based.</description>
        <label>Price Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different Tax or VAT percentages for different categories.</description>
        <inlineHelpText>Use this field if you would want to configure different Tax or VAT percentages for different categories.</inlineHelpText>
        <label>Tax Category</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Taxable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge</relationshipLabel>
        <relationshipName>ProductRatePlanCharge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recurring_Period__c</fullName>
        <label>Obsolete_Recurring Period</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <inlineHelpText>Unit Of Measurement
(Unit, kilo, tonne etc)</inlineHelpText>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Selling Price</description>
        <inlineHelpText>Unit Selling Price</inlineHelpText>
        <label>Unit Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift_Frequency__c</fullName>
        <inlineHelpText>Use this to indicate what would be your Uplift Frequency. So a frequency of Annual with 2% as uplift would increase the unit price by 2% every year for the duration of the Contract.</inlineHelpText>
        <label>Uplift Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Rate Plan Charge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CurrencyL__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>